# Legal-Law-Advisor

./: .env.example  .gitignore  AGENT_PROJECT_MEMORY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/: README.md
config/: case_corpus_targets.json  judgment_manifest.example.json  legal_books_sources.json  sources.yaml
data/: README.md
docs/: API_VERTICAL_SLICE.md  BUILD_PLAN.md  COMPLIANCE.md  DATA_SOURCES.md  INGESTION_STATUS.md  JUDGMENT_INGESTION.md  MODEL_STRATEGY.md  MVP_1000_CASES.md  PROJECT_STRUCTURE.md  RUNBOOK.md  SCHEMA.md  STAGING_INGESTION.md  TENK_CASE_CORPUS.md
infra/: README.md
legal_db/: __init__.py  cli.py  config.py  db.py  logging_config.py  storage.py  workers.py
manifests/: ingestion_summary.json
scripts/: apply_schema.ps1  build_pg_citations.py  build_pg_embeddings.py  build_staging_embeddings.py  chat_local.py  chatbot_status.py  corpus_progress.py  create_dirs.ps1  download_bns_public_documents.py  download_new_criminal_laws_public_documents.py  export_manifest.py  extract_pg_judgment_text.py  extract_pg_judgments.py  extract_staging_judgments.py  generate_aws_sc_manifest.py  generate_hc_manifest.py  generate_sc_manifest.py  generate_sci_latest_manifest.py  ingest_gazette.py  ingest_india_code_central_acts.py  ingest_judgments.py  ingest_legal_books.py  ingest_local_documents.py  ingest_staging.py  migrate_staging_to_postgres.py  ollama_status.py  run_backend_maintenance.py  run_quality_checks.py
services/: README.md
sql/: 001_schema.sql  002_indexes.sql  003_seed_reference.sql
tests/: test_ai_extraction.py  (+24 more)
(+69 files in other folders)
