[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-legal-database"
version = "0.1.0"
description = "Official-source Indian legal corpus database and processing pipelines"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "boto3>=1.34",
  "celery>=5.3",
  "httpx>=0.27",
  "langdetect>=1.0.9",
  "openai>=1.40",
  "pandas>=2.2",
  "pdfplumber>=0.11",
  "pgvector>=0.3",
  "pillow>=10.0",
  "psycopg2-binary>=2.9",
  "pymupdf>=1.24",
  "pytesseract>=0.3",
  "pyyaml>=6.0",
  "redis>=5.0",
  "requests>=2.32",
  "sqlalchemy>=2.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
legal-db = "legal_db.cli:main"

[tool.setuptools.packages.find]
include = ["legal_db*"]

[tool.ruff]
line-length = 100
target-version = "py311"
